JAXB marshalling.
implemented:

@XmlAccessorType
@XmlAttribute
@XmlElement
@XmlJavaTypeAdapter
@XmlRootElement
@XmlSeeAlso
@XmlType
@XmlValue

not implemented yet:

@XmlID
@XmlEnum
@XmlEnumValue